# linux-autotools-gcov-travis-sc

./: .travis.yml  Makefile.am  README.adoc  configure.ac  sonar-project.properties  update-date.txt
src/mylib/: Makefile.am  lib.cpp
src/test1/: Makefile.am  test.cpp
src/test2/: Makefile.am  test.cpp
